[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hsl-embedding-zero"
version = "0.1.1"
description = "Feed bytes to a transformer with ZERO learned input parameters - the HSL byte-signal substrate replaces the embedding layer (no tokenizer, no embedding table, no learned projection)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jinhyun Woo", email = "ggunio5782@gmail.com" }]
keywords = ["byte-level", "tokenizer-free", "embedding-free", "transformer", "signal", "hsl"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["torch>=2.0", "hsl-embedding>=0.5.0"]

[project.urls]
Homepage = "https://github.com/Woojiggun/hsl-embedding-zero"
Encoder = "https://github.com/Woojiggun/hsl-embedding"
Weights = "https://huggingface.co/ggunio/HoLo-6.5.1"

[tool.setuptools.packages.find]
where = ["src"]
